# django-app-starter

./: .gitignore  .is-template  .pre-commit-config.yaml  404.html  LICENSE  README.md  README.md.jinja  copier.yml  index.html  mkdocs.yml  pyproject.toml  pyproject.toml.jinja  sitemap.xml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml.jinja
.github/workflows/: gh-pages.yml  initialize-from-template.yml  test-template.yml
docs/: getting-started.md  index.md  release-process.md  workflows.md
docs/setup/: codecov.md  github-pages.md  index.md  labels.md  pypi-publishing.md
example_project/example_project/: urls.py
example_project/music_app/: admin.py  urls.py  views.py
example_project/music_app/migrations/: 0003_auto_20240214_0058.py
getting-started/: index.html
release-process/: index.html
screenshots/: demo.tape
search/: search_index.json
setup/: index.html
setup/codecov/: index.html
setup/github-pages/: index.html
setup/labels/: index.html
setup/pypi-publishing/: index.html
src/: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md.jinja  LICENSE.jinja  README.md.jinja  mkdocs.yml.jinja  pyproject.toml.jinja
src/.github/ISSUE_TEMPLATE/: bug.yml  config.yml.jinja
src/.github/workflows/: ci.yml  gh-pages.yml  labels.yml
src/docs/: development.md.jinja  index.md.jinja  releasing.md.jinja
src/example_project/example_project/: settings.py.jinja
src/tests/: settings.py.jinja  urls.py
tests/: conftest.py  settings.py.jinja  test_functionality.py  test_generation.py  test_something.py
workflows/: index.html
(+2 files in other folders)
