[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-app-starter"
version = "0.1.0"
description = "Copier template for Django reusable apps"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.envs.test]
installer = "uv"
skip-install = true
dependencies = ["copier", "pytest", "Django>=5.2", "tomli>=2.0"]

[tool.hatch.envs.test.scripts]
test = "pytest {args}"
